Created Globals, and contructor function

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./styles.css">
   <title>Odd Duck</title>
 </head>
+
 <body>
   <header>
     <img src="./img/ducky-color.png" alt="PlaceHolder" height="100px" width="100px">
@@ -26,27 +28,32 @@
         <li>Placeholder</li>
       </ul>
     </div>
+    <div id="choices-rules">
+      <div id="choices">
+        <img src="img/banana.jpg" id= 'img-1' alt="choice-one-PH" height="300px" width="300px">
+        <img src="img/banana.jpg" id= 'img-2' alt="choice-two-PH" height="300px" width="300px">
+        <img src="img/banana.jpg" id= 'img-3' alt="choice-three-PH" height="300px" width="300px">
+      </div>
 
-    <div id="choices">
-      <img src="./img/banana.jpg" alt="choice-one-PH" height="300px" width="300px">
-      <img src="./img/banana.jpg" alt="choice-two-PH" height="300px" width="300px">
-      <img src="./img/banana.jpg" alt="choice-three-PH" height="300px" width="300px">
-
-    </div>
-
-    <div id="rules">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea ipsa, hic recusandae consectetur sit, provident nostrum illo saepe dolorem aliquid illum? Ipsum maiores molestiae a 
-        maxime optio, eaque magni possimus ducimus nam harum odit numquam reiciendis quisquam iste pariatur quae minima sunt similique ad atque facilis quos? Dignissimos ea dolore placeat 
-        corporis porro? Consectetur voluptatibus unde, cum dolor reprehenderit quod odio voluptatum, ut quis esse perferendis inventore, suscipit porro sunt! Fugiat qui inventore sint cum 
-        ratione suscipit quisquam! Deserunt dignissimos tempora est, recusandae nihil porro. Totam ab in provident! Id earum quaerat eligendi recusandae aliquam ad enim sapiente aspernatur.</p>
+      <div id="rules">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ea ipsa, hic recusandae consectetur sit,
+          provident nostrum illo saepe dolorem aliquid illum? Ipsum maiores molestiae a
+          maxime optio, eaque magni possimus ducimus nam harum odit numquam reiciendis quisquam iste pariatur quae
+          minima sunt similique ad atque facilis quos? Dignissimos ea dolore placeat
+          corporis porro? Consectetur voluptatibus unde, cum dolor reprehenderit quod odio voluptatum, ut quis esse
+          perferendis inventore, suscipit porro sunt! Fugiat qui inventore sint cum
+          ratione suscipit quisquam! Deserunt dignissimos tempora est, recusandae nihil porro. Totam ab in provident! Id
+          earum quaerat eligendi recusandae aliquam ad enim sapiente aspernatur.</p>
+      </div>
     </div>
   </main>
 
   <footer>
-    <h1>Footer</h1>
+    <h3>Footer</h3>
   </footer>
-  
+
 
   <script src="./app.js"></script>
 </body>
+
 </html>
