--- a/index.html
+++ b/index.html
@@ -18,21 +18,14 @@
   <main>
     <div id="results">
       <h3>Results</h3>
-      <ul>
-        <li>Placeholder</li>
-        <li>Placeholder</li>
-        <li>Placeholder</li>
-        <li>Placeholder</li>
-        <li>Placeholder</li>
-        <li>Placeholder</li>
-        <li>Placeholder</li>
-      </ul>
+      <ul></ul>
+      <div id="my-button">View Results</div>
     </div>
     <div id="choices-rules">
       <div id="choices">
-        <img src="img/banana.jpg" id= 'img-1' alt="choice-one-PH" height="300px" width="300px">
-        <img src="img/banana.jpg" id= 'img-2' alt="choice-two-PH" height="300px" width="300px">
-        <img src="img/banana.jpg" id= 'img-3' alt="choice-three-PH" height="300px" width="300px">
+        <img id= 'img-1' height="300px" width="300px">
+        <img id= 'img-2' height="300px" width="300px">
+        <img id= 'img-3' height="300px" width="300px">
       </div>
 
       <div id="rules">
