--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h3>Footer</h3>
   </footer>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="./app.js"></script>
 </body>
 
