--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <h3>Results</h3>
       <ul></ul>
       <div id="my-button">View Results</div>
+      <div id="myChart"></div>
     </div>
     <div id="choices-rules">
       <div id="choices">
