Remove Duplicates and added chart

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <h3>Results</h3>
       <ul></ul>
       <div id="my-button">View Results</div>
-      <div id="myChart"></div>
+      <div>
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
     <div id="choices-rules">
       <div id="choices">
